--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
 * {
     box-sizing: border-box;
+    font-family: "Raleway", sans-serif;
 }
 
 body {
-
     margin: 0;
     padding: 0;
+    padding-bottom: 1000px;
 }
+
 
 .navbar {
     display: flex;
@@ -16,8 +18,7 @@ body {
 }
 
 .brand-logo img {
-    width: 70px;
-    height: 70px;
+    width: 80px;
 }
 
 .navbar-links ul {
@@ -30,9 +31,14 @@ body {
 .navbar-links li a {
     text-decoration: none;
     color: #676F9D;
-    font-size: 1.2rem;
+    font-size: 1rem;
+    font-weight: bold;
     padding: 1rem;
     display: block;
+}
+
+.navbar-links li a:hover {
+    color: white;
 }
 
 .toggle-button {
@@ -85,5 +91,59 @@ body {
         display: flex;
     }
 }
+
+/* Section 1 */
+.content-section {
+    width: auto;
+    height: 470px;
+    background-image: url("images/bg.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: scroll;
+    background-size: cover;
+    position: relative;
+}
+
+.container {
+    position: absolute;
+    left: 100px;
+    top: 100px;
+}
+
+.container p {
+    color: #2D3250;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    left: 10px;
+}
+
+.welcome {
+    font-size: 1.9rem;
+}
+
+
+.container h1 {
+    color: #2D3250;
+    font-size: 3rem;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+.container button {
+    position: relative;
+    left: 20px;
+    border: none;
+    color: #F9B17A;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 10px;
+    background-color: #2D3250;
+    margin-top: 20px;
+    border-radius: 5px;
+}
+
+
 
 
