--- a/styles/local-stories.css
+++ b/styles/local-stories.css
@@ -108,5 +108,9 @@
 .img-card> span {
     color: white;
 }
-
-
+/* Footer */
+th, td {
+    padding: 15px 90px 15px 15px;
+    text-align: left;
+    color: var(--white);
+  }
