--- a/styles/local-stories.css
+++ b/styles/local-stories.css
@@ -9,17 +9,18 @@
 
 .section1-container {
     height: 400px;
-    background-image: url("/images/Wahiba-Sands9.jpg");
-    background-repeat: no-repeat;
-    background-position: 50% 70%;
-    background-attachment: scroll;
-    background-size: cover;
+}
+
+.section1-container img {
+    width: 100%;
+    height: 400px;
 }
 
 .section1-container h1 {
     position: relative;
-    top: 80px;
     font-weight: 700;
+    color: var(--primary-color);
+    bottom: 280px;
 }
 
 .search-box {
