--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,12 +105,12 @@ body {
 .content-section {
     width: auto;
     height: 470px;
-    background-image: url("/images/bg.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: scroll;
-    background-size: cover;
     position: relative;
+}
+
+.content-section img {
+    width: 100%;
+    height: 470px;
 }
 
 .container {
