--- a/funpage/style.css
+++ b/funpage/style.css
@@ -1,40 +1,99 @@
-body {
-  background-color: rgb(29, 27, 27);
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
+/* Import Google font - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
+:root {
+  --primary-color: #2D3250;
+  --secondary-color: #676F9D;
+  --third-color: #F9B17A;
+  --four-color: #424769;
+  --white: #fff;
+  --black: #000;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  display:flex ;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-color: var(--primary-color);
 }
 
 .container {
-  margin-left: 50px;
+  background-color: var(--white);
+  width: 450px;
+  border-radius: 7px;
 }
 
-.gameName, .displayResult{
-  font-weight: 700;
-  font-size: 30px;
+.container h2 {
+  font-size: 25px;
+  font-weight: 500;
+  padding: 18px 25px;
+  border-bottom: 1px solid #ccc;
 }
 
-#rock, #paper, #scissor {
-  width: 60px;
-  border: solid 3px white;
-  border-radius: 50%;
-  padding: 30px;
-  margin-right: 20px;
+.container .content{
+  margin: 25px 20px 35px;
 }
 
-.play-img {
-  width: 40px;
+.container .word{
+  font-size: 33px;
+  font-weight: 500;
+  text-align: center;
+  letter-spacing: 24px;
+  margin-right: -24px;
+  text-transform: uppercase;
 }
 
-.displayScore{
-  margin-top: 50px;
-  font-size: 20px;
+.content .details{
+  margin: 25px 0 20px ;
+}
+
+.details p{
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.details p b{
   font-weight: 500;
 }
 
-.reset-score-btn {
-  cursor: pointer;
-  padding: 10px 10px;
-  font-size: 1rem;
-  border: none;
+.content input{
+  width: 100%;
+  height: 60px;
+  outline: none;
+  font-size: 18px;
+  padding: 0 16px;
+  border-radius: 5px;
+  border: 1px solid #aaa;
 }
 
+.content .buttons{
+  display: flex;
+  margin-top: 20px;
+  justify-content: space-between;
+}
+
+.buttons button{
+  border: none;
+  outline: none;
+  padding: 15px 0;
+  font-size: 17px;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  width: calc(100% / 2 - 8px);
+}
+
+.buttons .refresh-word{
+  background-color: var(--secondary-color);
+}
+
+.buttons .check-word{
+  background-color: var(--primary-color);
+}
