--- a/styles/styles.css
+++ b/styles/styles.css
@@ -279,10 +279,20 @@
 }
 
 th, td {
+    cursor: pointer;
     padding: 15px 90px 15px 15px;
     text-align: left;
     color: var(--white);
   }
+
+  th, td:hover {
+    color: #CCCCCC;
+  }
+
+td a{
+    text-decoration: none;
+    color: #fff;
+}
 
 
 
@@ -312,6 +322,11 @@ th, td {
     max-width: 700px;
     margin: 0 auto 30px;
     line-height: 1.6;
+}
+
+.about-section .cta-button a{
+    text-decoration: none;
+    color: #FFFFFF;
 }
 
 .about-section .cta-button {
