--- a/Feedback/styles.css
+++ b/Feedback/styles.css
@@ -8,7 +8,7 @@
 /* Styling for body */
 body {
     font-family:  "Raleway", sans-serif;
-    background-color: #FFFFFF;
+    background-color: #f4f6f9;
     margin: 0;
     padding: 20px;
 }
@@ -52,7 +52,6 @@ button {
     border-radius: 5px;
     color: white;
     font-size: 16px;
-
     cursor: pointer;
 }
 
@@ -65,6 +64,7 @@ button:hover {
     color: red;
     font-size: 14px;
 }
-label{
+
+label {
     color: #f4f6f9;
 }
