--- a/styles/guide.css
+++ b/styles/guide.css
@@ -66,6 +66,11 @@
   font-weight: 600;
 }
 
+.description button a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
 /* Slider */
 .container-fluid {
   background: #ffffff;
